peer-code-review feedback: fix contact section width on small screens

--- a/assets/css/small-screens.css
+++ b/assets/css/small-screens.css
@@ -125,6 +125,10 @@
         justify-content: center;
     }
 
+    #contact-form {
+        width: 60%;
+    }
+
     #success-message {
         padding-right: 0;
         padding: 4rem;
